--- a/gradle/init-scripts/update-modules.gradle
+++ b/gradle/init-scripts/update-modules.gradle
@@ -1,18 +1,17 @@
-def allModulesFile = file("modules.properties")
-def myModulesFile = file("my-modules.properties")
-def selectedModules = null
-
-initscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath group: "org.ajoberstar", name: "gradle-git", version: "1.3.1"
-    }
+import org.gradle.internal.os.OperatingSystem;
+// we have to use the git command on the path because GrGit does not release directories properly even when closed
+if (!OperatingSystem.current().isWindows() && "where git.exe".execute().waitFor() != 0) {
+    logger.error("update-modules.gradle requires git.exe in path!")
+    throw new GradleException("update-modules.gradle requires git.exe in path!")
+} else if ("which git".execute().waitFor() != 0) {
+    logger.error("update-modules requires git.exe in path!")
+    throw new GradleException("update-module.gradle requires git.exe in path!")
 }
 
-
+def projectDir = gradle.startParameter.currentDir.canonicalPath
+def allModulesFile = file("$projectDir/modules.properties")
+def myModulesFile = file("$projectDir/my-modules.properties")
+def selectedModules = null
 def myModules = new Properties();
 def allModules = new Properties();
 allModules.load(new FileReader(allModulesFile))
@@ -38,8 +37,6 @@ if (gradle.startParameter.projectProperties.containsKey("modules")) {
 
 
 import groovy.swing.SwingBuilder
-import org.ajoberstar.grgit.Grgit
-
 import java.awt.BorderLayout as BL
 
 if (selectedModules == null) {
@@ -103,7 +100,7 @@ selectedModules.each {
     myModules.setProperty(it, allModules.getProperty(it))
 }
 
-myModules.store(new FileWriter(myModulesFile), "Aktive Module")
+myModules.store(new FileWriter(myModulesFile), "active modules")
 apply plugin: InitializeModulesPlugin
 
 
@@ -111,15 +108,16 @@ class InitializeModulesPlugin implements Plugin<Gradle> {
     @Override
     public void apply(Gradle gradle) {
         Properties modules = new Properties();
-        def myModulesFile = new File("my-modules.properties")
-        def allModulesFile = new File("modules.properties")
+        def projectDir = gradle.startParameter.currentDir.canonicalPath
+        def myModulesFile = new File(projectDir, "my-modules.properties")
+        def allModulesFile = new File(projectDir, "modules.properties")
         modules.load(new FileReader(myModulesFile.exists() ? myModulesFile : allModulesFile))
         for (String module : modules.propertyNames()) {
-            def directory = new File("./modules/${module}")
+            def directory = new File(projectDir, "modules/${module}")
             def uri = modules.getProperty(module)
             if (!directory.exists()) {
                 println("Cloning module $module from $uri to $directory...")
-                Grgit.clone(dir: directory.getAbsolutePath(), uri: uri, remote: "origin")
+                "git clone $uri ${directory.canonicalPath}".execute().waitFor()
             } else {
                 println("Module $module from $uri already exists at $directory")
             }
